--- a/SimpleVPC/prod-stack-configuration.json
+++ b/SimpleVPC/prod-stack-configuration.json
@@ -4,6 +4,6 @@
     "DBPassword" : "ProdDBPassword",
     "DBRootPassword" : "ProdDBRootPassword",
     "DBUser" : "ProdDBuser",    
-    "KeyName" : "ProdEC2KeyName"
+    "KeyName" : "Rahul_COI_Test"
   }
 }
