--- a/prod-stack-configuration.json
+++ b/prod-stack-configuration.json
@@ -1,9 +1,9 @@
 {
   "Parameters" : {
-    "DBName" : "ProdWordPressDB",
-    "DBPassword" : "ProdDBPassword",
-    "DBRootPassword" : "ProdDBRootPassword",
-    "DBUser" : "ProdDBuser",    
+    "DBName" : "wordpress",
+    "DBPassword" : "Welcome!@#4",
+    "DBRootPassword" : "Welcome123$",
+    "DBUser" : "rahulna",    
     "KeyName" : "Rahul_COI_Test"
   }
 }
